# tricc

./: .gitignore  README.md  README_CHT.md  TODO.md  baseconfig.toml  dagram.puml  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  trad.po
locales/: babel.ini  tricc.pot
output/: .~lock.adult.xlsx#  adult.xlsx
tests/: build.py
tricc/: __init__.py  gettext.bat  models.py  tricc_diagnostic.py
tricc/converters/: XMLtoActivity.py  mc_to_tricc.py  tricc_to_xls_form.py  utils.py  xml_to_tricc.py
tricc/models/: lang.py  nodes.py  tricc.py
tricc/parsers/: xml.py
tricc/serializers/: drawio.py  xls_form.py  xml.py
tricc/services/: process_diagram.py  utils.py
tricc/strategies/: base_input_strategy.py  base_output_strategy.py  base_strategy.py  drawio.py  medalcreator.py  xls_form.py  xlsform_cdss.py  xlsform_cht.py
tricc/tools/: TRICCS-Scratchpad.xml  shapes.drawio
tricc/visitors/: tricc.py
tricc_og/: README.md
tricc_og/builders/: drawio_type_map.py  mc_to_tricc.py  tricc_to_bpmn.py  utils.py  xls_form.py  xml_to_tricc.py
tricc_og/docs/: .$docs.drawio.bkp  .$docs.drawio.dtmp  .$docs.drawio_1.dtmp  .$overall.drawio.bkp  .$overall.drawio.dtmp  MEDALCREATOR.MD  MEDCALCREATOR_PAYLOAD.md  docs.drawio  overall.drawio  tooling.ods  tooling.pptx
tricc_og/models/: base.py  operators.py  opperators.py  ordered_set.py  paterns.py  tricc.py
tricc_og/tests/: bench.py  build.py
tricc_og/visitors/: drawio_project.py  tricc_project.py
tricc_oo/: __init__.py
uploads/: .$test_workflow.drawio.bkp  adult.xlsx  test_workflow.drawio
(+42 files in other folders)
