[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
exclude = ["locales"]
[project]
name = "TRICC"
version = "1.0.1"
description = "Python library that converts XLS to Fhir SDC ressource."
dependencies = [
    "wheel",
    "lxml",
    "html2text",
    "pydantic == 1.*",
    "babel",
    "xlsxwriter",
    "polib",
    "numpy",
    "pandas"
]