[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
exclude = ["locales"]
[project]
name = "TRICC"
version = "1.0.1"
dependencies = [
    "wheel",
    "lxml",
    "html2text",
    "pydantic == 1.*",
    "babel",
    "xlsxwriter",
    "polib",
    "numpy",
    "pandas",
    "StrEnum"
]