[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
exclude = ["locales"]
[project]
name = "tricc-oo"
version = "1.0.1"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
description = "Python library that converts CDSS L2 in L3"
[project.urls]
Homepage = "https://github.com/SwissTPH/tricc"
Issues = "https://github.com/SwissTPH/tricc/issues"
